# arcade

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
2048/: Board.cpp  Board.h  CMakeLists.txt  main.cpp
connect_four/: CMakeLists.txt  ConnectFour.cpp  ConnectFour.h  main.cpp
cube_timer/: CMakeLists.txt  Scramble.cpp  Scramble.h  Timer.cpp  Timer.h  main.cpp
games/2048/: CMakeLists.txt  main.cpp
games/cube_timer/: Scramble.cpp  Timer.cpp  Timer.h  main.cpp
games/snake/: CMakeLists.txt  Controller.cpp
lib/tui/: CMakeLists.txt  Tui.cpp
lib/tui/include/Tui/: Tui.h
snake/: CMakeLists.txt  Controller.cpp  Controller.h  Game.cpp  Game.h  Snake.cpp  main.cpp
src/: Board.cpp  CMakeLists.txt  TwentyFortyEight.cpp
src/2048/: Board.cpp  Board.h  Board.hpp  CMakeLists.txt  main.cpp
src/connect_four/: CMakeLists.txt  ConnectFour.cpp  ConnectFour.hpp  main.cpp
src/cube_timer/: CMakeLists.txt  Scramble.cpp  Scramble.h  Scramble.hpp  Timer.cpp  Timer.h  Timer.hpp  main.cpp
src/snake/: CMakeLists.txt  Controller.cpp  Controller.h  Controller.hpp  Game.cpp  Game.h  Game.hpp  main.cpp
tui/: Tui.cpp
tui/include/Tui/: Tui.h
twentyfortyeight/: Board.cpp  Board.h  CMakeLists.txt  TwentyFortyEight.cpp
